--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 group = 'fr.skyost'
-version = '0.2.5'
+version = '0.2.6'
 
 sourceCompatibility = 1.8
 
@@ -31,6 +31,7 @@ dependencies {
 }
 
 shadowJar {
+    archiveFileName.set("OwnGarden-${project.version}.jar")
     setDestinationDir(new File(rootProject.projectDir, 'build/release/'))
     mergeServiceFiles()
     relocate 'org.bstats.bukkit', 'fr.skyost.owngarden.util.bstats'
